--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
       <hr class="border-dashed border-emerald-200">
       <div>
         <p class="font-bold text-center text-emerald-700">🍹 ประกาศ 🍹</p>
-        <p class="text-center">หยุด 11-12 ธันวาคม ครับ</p>
+        <p class="text-center">ตอนนี้ Verve Juice มี Line Official Account แล้วน้า สามารถเข้าไปเพิ่มเพื่อนเพื่อรับส่วนลด 5% กันได้นะครับ🎉</p>
       </div>
     </div>
 
@@ -1161,4 +1161,5 @@ if (lineFloat) {
 </script>
 </body>
 </html>
+
 
