--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
       <hr class="border-dashed border-emerald-200">
       <div>
         <p class="font-bold text-center text-emerald-700">🍹 ประกาศ 🍹</p>
-        <p class="text-center">ตอนนี้ Verve Juice มี Line Official Account แล้วน้า สามารถเข้าไปเพิ่มเพื่อนเพื่อรับส่วนลด 5% กันได้นะครับ🎉</p>
+        <p class="text-center">ตอนนี้ Verve Juice มี Line Official Account แล้วน้า สามารถเข้าไปเพิ่มเพื่อนและพิมพ์ "ส่วนลด" เพื่อรับส่วนลด 5% กันได้นะครับ🎉</p>
       </div>
     </div>
 
@@ -786,8 +786,8 @@ if (lineFloat) {
     { id:'recharge-me',  name:'Recharge Me',  ingredients:'แอปเปิ้ล, ขิง, มะนาว', properties:'กระตุ้นร่างกายให้ฟื้นตัวจากการเมื่อยล้า', imageUrl:'https://github.com/kornkawes/VerveImage/blob/main/recharge%20me.jpg?raw=true', sizes: [{size:'250ml', price:89}, {size:'300ml', price:109}]},
   ];
   const local_discountCodes = [
-    { code:"SUCHATANDSOMPOP", type:"percent", value:15, expiryDate:"2025-12-31", minSpend:0, minItems:5 },
-    { code:"VERVETIKTOK", type:"percent", value:10, expiryDate:"2025-09-30", minSpend:0, minItems:3 }
+    { code:"VJLINE5", type:"percent", value:5, expiryDate:"2025-12-31", minSpend:0, minItems:3, maxDiscount:40 },
+    { code:"VERVETIKTOK", type:"fixed", value:20, expiryDate:"2025-12-31", minSpend:0, minItems:3, maxDiscount:20 }
   ];
   const n8nWebhookUrl = "https://n8n-verve-u61532.vm.elestio.app/webhook/3292a5c3-0f7f-424f-92f8-7dc42f51d763";
 
@@ -936,9 +936,17 @@ if (lineFloat) {
 
     let discountValue = 0;
     if (order.discount) {
-      discountValue = order.discount.type === 'percent' ? (subtotal * order.discount.value) / 100 : order.discount.value;
-    }
-    order.total = Math.max(0, subtotal - discountValue);
+      discountValue = order.discount.type === 'percent' 
+        ? (subtotal * order.discount.value) / 100 
+        : order.discount.value;
+
+  // ✅ คุมเพดานส่วนลด (maxDiscount)
+  if (typeof order.discount.maxDiscount === 'number') {
+    discountValue = Math.min(discountValue, order.discount.maxDiscount);
+  }
+}
+
+order.total = Math.max(0, subtotal - discountValue);
 
     if (subtotalPriceEl) subtotalPriceEl.textContent = `฿${(order.subtotal || 0).toFixed(2)}`;
     if (totalPriceEl) totalPriceEl.textContent       = `฿${(order.total    || 0).toFixed(2)}`;
@@ -1010,9 +1018,19 @@ if (lineFloat) {
       let summaryHTML = `<div class="mt-2 pt-2 border-t text-sm text-right">`;
       summaryHTML += `<p>ยอดรวม: ฿${data.subtotal.toFixed(2)}</p>`;
       if (data.discount) {
-        const discountAmount = data.discount.type === 'fixed' ? data.discount.value : (data.subtotal * data.discount.value) / 100;
+        let discountAmount = data.discount.type === 'fixed'
         summaryHTML += `<p class="text-red-500">ส่วนลด (${data.discount.code}): -฿${discountAmount.toFixed(2)}</p>`;
+    ? data.discount.value
       }
+    : (data.subtotal * data.discount.value) / 100;
+
+  // ✅ คุมเพดานส่วนลด
+  if (typeof data.discount.maxDiscount === 'number') {
+    discountAmount = Math.min(discountAmount, data.discount.maxDiscount);
+  }
+
+  summaryHTML += `<p class="text-red-500">ส่วนลด (${data.discount.code}): -฿${discountAmount.toFixed(2)}</p>`;
+}
       summaryHTML += `<p class="text-base font-bold mt-1">ยอดสุทธิ: <span class="text-xl text-emerald-600">฿${data.total.toFixed(2)}</span></p></div>`;
       container.innerHTML += summaryHTML;
     }
@@ -1161,5 +1179,6 @@ if (lineFloat) {
 </script>
 </body>
 </html>
+
 
 
